W.org Showcase: Ensure 'Recently Added Sites' is left aligned.
Fixes #1488.



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@2370 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
@@ -693,6 +693,7 @@ a.wpsc-hero-learnmore {
 
 #pagebody.home .wpsc-recent {
 	margin: 0;
+	overflow: auto;
 }
 
 .home .wpsc-recent>li {
